--- a/week3/index.html
+++ b/week3/index.html
@@ -3,7 +3,9 @@
 <body>
 
 <h1>Welcome to Hash's Website!</h1>
-<p>Hash loves to play sports.</p>
+<p>Hash loves to play sports suc as volleyball, badminton, and table tennis.</p>
+<p style="color:red;">This is his hair color.</p>
+<p><b>His favourite qoute was:</b> "There is no <i>elevator</i> to success, you have to take the <i>stairs</i>."
 
 </body>
 </html>
