--- a/week3/index.html
+++ b/week3/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>Welcome to Hash's Website!</h1>
+<h1>Introduction of Hash's Life </h1> 
 <p>Hash loves to play sports suc as volleyball, badminton, and table tennis.</p>
 <p style="color:red;">This is his favorite hair color.</p>
 <p><b>His favourite qoute was:</b> "There is no <i>elevator</i> to success, you have to take the <i>stairs</i>."
