--- a/week3/index.html
+++ b/week3/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Introduction to Hash's Life </h1> 
-<p>Hash loves to play sports suc as volleyball, badminton, and table tennis.</p>
+<p>My full name is Abdul Hasheem Omega Ditano.</p>
 <p style="color:red;">This is his favorite hair color.</p>
 <p><b>His favourite qoute was:</b> "There is no <i>elevator</i> to success, you have to take the <i>stairs</i>."
 
