--- a/week3/index.html
+++ b/week3/index.html
@@ -4,7 +4,7 @@
 
 <h1>Introduction to Hash's Life </h1> 
 <p>My full name is Abdul Hasheem Omega Ditano.</p>
-<p style="color:red;">This is his favorite hair color.</p>
+<p style="color:red;">But I like to be called Hash.</p>
 <p><b>His favourite qoute was:</b> "There is no <i>elevator</i> to success, you have to take the <i>stairs</i>."
 
 </body>
