--- a/week3/index.html
+++ b/week3/index.html
@@ -5,7 +5,9 @@
 <h1>Introduction to Hash's Life </h1> 
 <p>My full name is Abdul Hasheem Omega Ditano.</p>
 <p style="color:red;">But I like to be called Hash.</p>
-<p><b>His favourite qoute was:</b> "There is no <i>elevator</i> to success, you have to take the <i>stairs</i>."
+<p><b>My favorite quote from Paulo Coelho was:</b> “All battles in life serve to <i>teach</i> us something, even the battles we <i>lose."</i></p>
+
+
 
 </body>
 </html>
