--- a/week3/index.html
+++ b/week3/index.html
@@ -7,6 +7,8 @@
 <p style="color:red;">But I like to be called Hash.</p>
 <p><b>My favorite quote from Paulo Coelho was:</b> “All battles in life serve to <i>teach</i> us something, even the battles we <i>lose."</i></p>
 <p>Another inspiring quote from Paulo Coelho I liked was his: <q>Straight roads do not make skillful drivers.</q></p>
+<h1 style="color:hotpink">I graduated from Taguig National High School </h1>
+<p style="color:yellow;">I am currently taking a Bachelor of Science in Information Technology with Specialization in Mobile and Internet Technology</p>
 
 
 </body>
