Lesson 2.8 - Block & Inline

--- a/week3/index.html
+++ b/week3/index.html
@@ -18,7 +18,7 @@
 <p style="border: 1px solid black">I have an interest in medical courses like dentistry, psychology, 
 nursing, med-tech, and dermatology.</p>
 
-<div style="border: 1px solid black">I have basic knowledge of Android Studio and Figma</div>
+<div style="border: 1px solid black">I have basic knowledge of Android Studio and Figma.</div>
 
 <html>
 <head>
