--- a/week3/index.html
+++ b/week3/index.html
@@ -50,6 +50,25 @@ nursing, med-tech, and dermatology.</p>
 <p>This is my least favorite sport.</p>
 </div>
 
+<head>
+<style>
+#myHeader {
+  background-color: lightblue;
+  color: black;
+  padding: 40px;
+  text-align: center;
+} 
+</style>
+</head>
+<body>
+
+<h2>Hash's expectations about this subject</h2>
+
+<h1 id="myHeader">My Expectations</h1>
+
+<p> I anticipate learning the basics of 
+website programming and hope to find this subject enjoyable.</p>
+
 
 
 
