Lesson 2.11 - File Paths

--- a/week3/index.html
+++ b/week3/index.html
@@ -69,7 +69,8 @@ nursing, med-tech, and dermatology.</p>
 <p> I anticipate learning the basics of 
 website programming and hope to find this subject enjoyable.</p>
 
-
+<h2>A picture that describes me as a person</h2>
+<img src="https://2.bp.blogspot.com/-5TZf0YuMP0E/VpJ2qHV3AAI/AAAAAAAACc4/le45VXNT6Ng/s1600/IMG_1335.jpg" alt="My fave pic" style="width:300px">
 
 
 
