--- a/week3/index.html
+++ b/week3/index.html
@@ -72,6 +72,15 @@ website programming and hope to find this subject enjoyable.</p>
 <h2>A picture that describes me as a person</h2>
 <img src="https://2.bp.blogspot.com/-5TZf0YuMP0E/VpJ2qHV3AAI/AAAAAAAACc4/le45VXNT6Ng/s1600/IMG_1335.jpg" alt="My fave pic" style="width:300px">
 
+<head>
+  <title>What I wish to accomplish in life</title>
+</head>
+<body>
+
+<p>I aspire to complete my college education 
+and establish a successful career, ideally as a professional UI designer or within the industry.</p>
+
+
 
 
 
