fixed the syntax error

--- a/week3/index.html
+++ b/week3/index.html
@@ -32,7 +32,7 @@ nursing, med-tech, and dermatology.</p>
 }
 </style>
 </head>
-<body
+<body>
 	<p><b>My favorite sports are:</b></p>	
 
 <div class="sports">
