--- a/week3/index.html
+++ b/week3/index.html
@@ -1,97 +1,78 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-<h1>Introduction to Hash's Life </h1> 
-
-<p>My full name is Abdul Hasheem Omega Ditano.</p>
-
-<p style="color:red;">But I like to be called Hash.</p>
-
-<p><b>My favorite quote from Paulo Coelho was:</b> “All battles in life serve to <i>teach</i> us something, even the battles we <i>lose."</i></p>
-
-<p>Another inspiring quote from Paulo Coelho I liked was his: <q>Straight roads do not make skillful drivers.</q></p>
-
-<h1 style="color:hotpink">I graduated from Taguig National High School </h1>
-<p style="color:yellow;">I am currently taking a Bachelor of Science in Information Technology with Specialization in Mobile and Internet Technology</p>
-
-<p style="border: 1px solid black">I have an interest in medical courses like dentistry, psychology, 
-nursing, med-tech, and dermatology.</p>
-
-<div style="border: 1px solid black">I have basic knowledge of Android Studio and Figma.</div>
-
-<html>
-<head>
-<style>
-.sports {
-  background-color:green;
-  color: white;
-  border: 3px solid black;
-  margin: 10px;
-  padding: 11px;
-}
-</style>
-</head>
-<body>
-	<p><b>My favorite sports are:</b></p>	
-
-<div class="sports">
-<h2>Volleyball</h2>
-<p>We won the championship from the previous sports fest at Asia Pacific College.</p>
-</div> 
-
-<div class="sports">
-<h2>Table Tennis</h2>
-<p>I placed 3rd back from my elementary days.</p>
-</div>
-
-<div class="sports">
-<h2>Badminton</h2>
-<p>This is my least favorite sport.</p>
-</div>
-
-<head>
-<style>
-#myHeader {
-  background-color: lightblue;
-  color: black;
-  padding: 40px;
-  text-align: center;
-} 
-</style>
-</head>
-<body>
-
-<h2>Hash's expectations about this subject</h2>
-
-<h1 id="myHeader">My Expectations</h1>
-
-<p> I anticipate learning the basics of 
-website programming and hope to find this subject enjoyable.</p>
-
-<h2>A picture that describes me as a person</h2>
-<img src="https://2.bp.blogspot.com/-5TZf0YuMP0E/VpJ2qHV3AAI/AAAAAAAACc4/le45VXNT6Ng/s1600/IMG_1335.jpg" alt="My fave pic" style="width:300px">
-
-<head>
-  <title>What I wish to accomplish in life</title>
-</head>
-<body>
-
-<p>I aspire to complete my college education 
-and establish a successful career, ideally as a professional UI designer or within the industry.</p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
+  <head>
+    <title>Hasheem Ditano</title>
+    <style>
+      .sports {
+        background-color: green;
+        color: white;
+        border: 3px solid black;
+        margin: 10px;
+        padding: 11px;
+      }
+      #myHeader {
+        background-color: lightblue;
+        color: black;
+        padding: 40px;
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Introduction to Hash's Life</h1>
+    <p>My full name is Abdul Hasheem Omega Ditano.</p>
+    <p style="color: red">But I like to be called Hash.</p>
+    <p>
+      <b>My favorite quote from Paulo Coelho was:</b> “All battles in life serve
+      to <i>teach</i> us something, even the battles we <i>lose."</i>
+    </p>
+    <p>
+      Another inspiring quote from Paulo Coelho I liked was his:
+      <q>Straight roads do not make skillful drivers.</q>
+    </p>
+    <h1 style="color: hotpink">I graduated from Taguig National High School</h1>
+    <p style="color: purple">
+      I am currently taking a Bachelor of Science in Information Technology with
+      Specialization in Mobile and Internet Technology
+    </p>
+    <p style="border: 1px solid black">
+      I have an interest in medical courses like dentistry, psychology, nursing,
+      med-tech, and dermatology.
+    </p>
+    <div style="border: 1px solid black">
+      I have basic knowledge of Android Studio and Figma.
+    </div>
+    <p><b>My favorite sports are:</b></p>
+    <div class="sports">
+      <h2>Volleyball</h2>
+      <p>
+        We won the championship from the previous sports fest at Asia Pacific
+        College.
+      </p>
+    </div>
+    <div class="sports">
+      <h2>Table Tennis</h2>
+      <p>I placed 3rd back from my elementary days.</p>
+    </div>
+    <div class="sports">
+      <h2>Badminton</h2>
+      <p>This is my least favorite sport.</p>
+    </div>
+    <h2>Hash's expectations about this subject</h2>
+    <h1 id="myHeader">My Expectations</h1>
+    <p>
+      I anticipate learning the basics of website programming and hope to find
+      this subject enjoyable.
+    </p>
+    <h2>A picture that describes me as a person</h2>
+    <img
+      src="https://2.bp.blogspot.com/-5TZf0YuMP0E/VpJ2qHV3AAI/AAAAAAAACc4/le45VXNT6Ng/s1600/IMG_1335.jpg"
+      alt="My fave pic"
+      style="width: 300px"
+    />
+    <p>
+      I aspire to complete my college education and establish a successful
+      career, ideally as a professional UI designer or within the industry.
+    </p>
+  </body>
 </html>
-
