--- a/week3/index.html
+++ b/week3/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>Hasheem Ditano</title>
     <style>
+      body {
+        background-color: lightslategray;
+      }
       .sports {
         background-color: green;
         color: white;
