Added background color

--- a/week3/index.html
+++ b/week3/index.html
@@ -4,7 +4,8 @@
     <title>Hasheem Ditano</title>
     <style>
       body {
-        background-color: lightslategray;
+        background-color: beige;
+        text-align: left;
       }
       .sports {
         background-color: green;
