Lesson 1 JS Introduction

--- a/week3/index.html
+++ b/week3/index.html
@@ -188,7 +188,7 @@
                   as Hash. I am 19 years old, born on February 13. Currently, I
                   am a student pursuing a degree in Mobile and Internet
                   Technology within the field of Information Technology at Asia
-                  Pacific College.</span
+                  Pacific College</span
                 ></span
               ><a href="https://unsplash.com/"></a>
             </p>
