--- a/week3/index.html
+++ b/week3/index.html
@@ -333,7 +333,7 @@
               >
                 <div class="caption-content">
                   <h2>XXXXXXXXXXXXXX</h2>
-                  <p class="mb-0">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+                  <p class="mb">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
                 </div>
               </div>
               <img class="img-fluid" src="assets/img/portfolio-1.jpg" />
