--- a/week3/index.html
+++ b/week3/index.html
@@ -322,7 +322,7 @@
       <div class="container">
         <div class="content-section-heading text-center">
           <h3 class="text-secondary mb-0">Portfolio</h3>
-          <h2 class="mb-5" style="color: rgb(222, 90, 194)">My people</h2>
+          <h2 class="mb-5" style="color: rgb(222, 90, 194)">My Life</h2>
         </div>
         <div class="row g-0">
           <div class="col-lg-6">
