--- a/Week 5/index.html
+++ b/Week 5/index.html
@@ -423,6 +423,18 @@
       <a class="js-scroll-trigger scroll-to-top rounded" href="#page-top"
         ><i class="fa fa-angle-up"></i
       ></a>
+      <script>
+        const person = {
+          firstName: "Hasheem",
+          lastName: "Ditano",
+          age: 19,
+          haircolor: "blue",
+        };
+
+        // Display some data from the object:
+        document.getElementById("demo").innerHTML =
+          person.firstName + " is " + person.age + " years old.";
+      </script>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/stylish-portfolio.js"></script>
