--- a/Week 5/index.html
+++ b/Week 5/index.html
@@ -423,34 +423,52 @@
       <a class="js-scroll-trigger scroll-to-top rounded" href="#page-top"
         ><i class="fa fa-angle-up"></i
       ></a>
-      <script>
-       <script type="module">
-  import message from "./message.js";
 
-  const person = {
-    firstName: "Hasheem",
-    lastName: "Ditano",
-    age: 19,
-    haircolor: "blue",
-  };
-</script>
+<footer class="footer text-center">
+  <ul class="list-inline mb-5">
+ 
+  <div class="container">
+    <p class="text-muted mb-0 small">Copyright &nbsp;© Brand 2024</p>
+  </div>
+  <a class="js-scroll-trigger scroll-to-top rounded" href="#page-top">
+    <i class="fa fa-angle-up"></i>
+  </a>
+  <script type="module">
+    import message from "./message.js";
 
-                document.getElementById("demo").innerHTML =
-                  person.firstName + " is " + person.age + " years old.";
+    const person = {
+      firstName: "Hasheem",
+      lastName: "Ditano",
+      age: 19,
+      haircolor: "blue"
+    };
 
-                let text1 = "Outside: " + typeof carName;
-                document.getElementById("demo1").innerHTML = text1;
+    document.getElementById("demo").innerHTML =
+      person.firstName + " is " + person.age + " years old.";
 
-                function myFunction() {
-                  let carName = "Porsche";
-                  let text2 = "Inside: " + typeof carName + " " + carName;
-                  document.getElementById("demo2").innerHTML = text2;
-                }
+    let text1 = "Outside: " + typeof person.firstName;
+    document.getElementById("demo1").innerHTML = text1;
 
-                myFunction();
-      </script>
-    </footer>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/stylish-portfolio.js"></script>
-  </body>
+    function myFunction() {
+      let carName = "Porsche";
+      let text2 = "Inside: " + typeof carName + " " + carName;
+      document.getElementById("demo2").innerHTML = text2;
+    }
+
+    myFunction();
+
+    class Car {
+      constructor(name, year) {
+        this.name = name;
+        this.year = year;
+      }
+    }
+
+    const myCar1 = new Car("Ford", 2014);
+    const myCar2 = new Car("Audi", 2019);
+  </script>
+</footer>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="assets/js/stylish-portfolio.js"></script>
+</body>
 </html>
